fixed bug of carat icon placement on mobile -fixed bug of nav item alignment on mobile -fixed bug of sidenav X svg alignment on mobile

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -157,6 +157,18 @@ textarea {
 
 /* Sidebar nav Styles */
 
+.sidebar-header {
+	display: flex;
+
+	a {
+		width: 50%;
+
+		svg {
+			float: right;
+		}
+	}
+}
+
 .sidebar-body {
 	a {
 		font-family: $form-font;
