--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -399,8 +399,13 @@
 		margin-bottom: 5%;
 	}
 
-	ul.nav.nav-tabs.navbar-site {
-		display: flex;
+
+	#banner ul.nav.nav-tabs.navbar-site {
+		align-items: flex-start;
 		flex-direction: column;
+	}
+
+	#banner .lfr-nav-item .lfr-nav-child-toggle {
+		position: relative;
 	}
 }
